@@ -1,4 +1,4 @@
 DIST netgo_ng-0.1.4.tar.gz 650263 RMD160 c7b26335e26de76cf480f9a2ebfa968be8c062ac SHA1 966ce290781b9057a6cd0cd2c4593cfd9d645097 SHA256 8965bcfd1fe89f9818654bfde03958df7390a99b515924c8b0fc8b911ceb0ff1
-EBUILD netgo_ng-0.1.4.ebuild 769 RMD160 ce1ba2576531095b1215a5110a98d6214012fb4e SHA1 3626df824a5a658a8bc80ba63088278aaffc22b0 SHA256 7a5ee9fb27e4c8548f449932d1634504679a335dc700fb453bdf3f6c2cf756eb
-MISC ChangeLog 354 RMD160 6fe1d9627372acce23a3ee23dc4723fe4ba590d9 SHA1 4b258bdde120eabb678981e6f36311e126b9744d SHA256 39021ee2f920605c8b3b5460c8e401265562d60572c05d469d55bd08fb95b56d
+EBUILD netgo_ng-0.1.4.ebuild 657 RMD160 f9730ae9ec5541dec9e5edfeba9d85ac7faa2fc1 SHA1 8ef2d674225b542a6af24f168eb0e504bf7151d5 SHA256 c502c838903172373b467bf559b740e59b622c618db636728367ef4452e659e7
+MISC ChangeLog 616 RMD160 650c2f091ccb7bcb2854b5313338ff27b8343406 SHA1 6bfd55fe506b98c3b44d7e2cae084e6ac25349e6 SHA256 0bce4ed7210796af69eabc471f30145e566019db16c219456e6f290ef3fff7b3
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
