@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
+  netgo_ng-0.1.4.ebuild:
+  Removed qt:3 from dependencies since it is pulled up by inherited
+  kde-function class. src_compile was dropped because it is already defined in
+  kde-functions eclass
+
   11 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   netgo_ng-0.1.4.ebuild:
   whitespaces
